@@ -8,83 +8,34 @@ android {
         applicationId "com.videonasocialmedia.videona"
         minSdkVersion 18
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 12
+        versionName "0.2"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
-/*
-apply plugin: 'android'
-apply plugin: 'robolectric'
-*/
-//robolectric {
-//    include '**/*Test.class'
-/*
-    // configure max heap size of the test JVM
-    maxHeapSize = '2048m'
-
-    // configure the test JVM arguments
-    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-
-    // Specify max number of processes (default is 1)
-    maxParallelForks = 4
-
-    // Specify max number of test classes to execute in a test process
-    // before restarting the process (default is unlimited)
-    forkEvery = 150
-
-    // configure whether failing tests should fail the build
-    ignoreFailures true
-
-    // use afterTest to listen to the test execution results
-    afterTest { descriptor, result ->
-        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
-    }
-}*/
 
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v13:21.0.3'
     compile 'com.googlecode.mp4parser:isoparser:1.0.4.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.felipecsl.asymmetricgridview:library:1.1.0'
-    //compile 'com.android.support:support-v4:20.0.0'
-    compile 'com.android.support:support-v13:21.0.0'
-    /*androidTestCompile 'com.squareup.assertj:assertj-android:1.0.0'
-
-        androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
-        androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
-        androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
-
-        androidTestCompile('junit:junit:4.12') {
-            exclude module: 'hamcrest-core'
-        }
-        androidTestCompile('org.robolectric:robolectric:2.4') {
-            exclude module: 'classworlds'
-            exclude module: 'commons-logging'
-            exclude module: 'httpclient'
-            exclude module: 'maven-artifact'
-            exclude module: 'maven-artifact-manager'
-            exclude module: 'maven-error-diagnostics'
-            exclude module: 'maven-model'
-            exclude module: 'maven-project'
-            exclude module: 'maven-settings'
-            exclude module: 'plexus-container-default'
-            exclude module: 'plexus-interpolation'
-            exclude module: 'plexus-utils'
-            exclude module: 'support-v4'
-            exclude module: 'wagon-file'
-            exclude module: 'wagon-http-lightweight'
-            exclude module: 'wagon-provider-api'
-        }*/
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.jakewharton:butterknife:6.0.0'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
 }
+
 
 
 
